# guikit

./: .buildinfo  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/howtos/: add_plugin.doctree  howtos_index.doctree  installation.doctree  status.doctree  threads.doctree  using_guikit.doctree  using_pyguitemp.doctree
.doctrees/technical/api/: index.doctree
.doctrees/technical/api/guikit/: index.doctree
.doctrees/technical/api/pyguitemp/: index.doctree
.github/workflows/: check-links.yml  ci.yml  deploy.yml
_sources/: index.rst.txt
_sources/howtos/: howtos_index.rst.txt  installation.md.txt  status.md.txt  threads.md.txt  using_pyguitemp.md.txt
_sources/technical/api/: index.rst.txt
_sources/technical/api/guikit/: index.rst.txt
_sources/technical/api/pyguitemp/: index.rst.txt
_static/: documentation_options.js
app/: __main__.py  core.py  logging.py  plugins.py  structures.py  threads.py
app/extensions/: __init__.py
app/extensions/myplugin/: __init__.py  model.py  presenter.py  view.py
docs/: conf.py  index.rst
docs/howtos/: add_plugin.md  howtos_index.rst  installation.md  status.md  threads.md  using_pyguitemp.md
docs/source/: conf.py  index.rst
guikit/: __init__.py  config.py  core.py  logging.py  progress.py  scripts.py  threads.py
guikit/extensions/about_dialog/: about_dialog.py  description
guikit/extensions/example_plugin/: __init__.py  notebook.py
guikit/extensions/load_data/: presenter.py
guikit/skeleton/: __init__.py  __main__.py  config.py
howtos/: add_plugin.html  howtos_index.html  installation.html  status.html  threads.html  using_guikit.html  using_pyguitemp.html
myapp/: __init__.py  __main__.py  core.py  plugins.py
myapp/extensions/: __init__.py  about_dialog.py  simple_plugin.py
myapp/extensions/complex_plugin/: __init__.py  view.py
myapp/extensions/myplugin/: __init__.py  model.py  presenter.py
pyguitemp/: __init__.py  __main__.py  config.py  core.py  logging.py  plugins.py  scripts.py  structures.py  threads.py
pyguitemp/extensions/about_dialog/: about_dialog.py  description  licence  license
pyguitemp/extensions/example_plugin/: central.py  menu.py  notebook.py  tools.py
pyguitemp/extensions/load_data/: MOCK_DATA.csv  __init__.py  model.py  presenter.py  view.py
pyguitemp/skeleton/: __init__.py  __main__.py  config.py
technical/api/: index.html
technical/api/guikit/: index.html
technical/api/guikit/__main__/: index.html
technical/api/guikit/config/: index.html
technical/api/guikit/core/: index.html
technical/api/guikit/extensions/: index.html
technical/api/guikit/logging/: index.html
technical/api/guikit/plugins/: index.html
technical/api/pyguitemp/: index.html
tests/: conftest.py  test_core.py  test_logging.py  test_plugins.py  test_progress.py  test_scripts.py  test_threads.py
(+135 files in other folders)
