[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = myapp
version = 0.0.1
url = https://github.com/ImperialCollegeLondon/python-gui-template
author = Research Computing Service, Imperial College London
author_email = rcs-support@imperial.ac.uk

[options]
packages = myapp
install_requires =
    wxPython

[options.extras_require]
dev =
    flake8
    black
    pytest
    pre-commit
    isort
    mypy
    bump2version
    pytest-cov
    pytest-flake8
    pytest-mypy
doc =
    sphinx
    myst-parser

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.cfg]

[bumpversion:file:docs/source/conf.py]

[aliases]
test = pytest

[tool:pytest]
addopts =
	-v --flake8 --mypy -p no:warnings
	--cov=myapp  --cov-report=html:htmlcov/coverage
	--doctest-modules --ignore=myapp/__main__.py

[pycodestyle]
max-line-length = 88

[flake8]
max-line-length = 88
exclude = .venv/
extend-ignore =
	E203,

[mypy]
ignore_missing_imports = True
strict_optional = False

[mypy-setup]
ignore_errors = True

[tool.isort]
multi_line_output = 3
include_trailing_comma = true