[bumpversion]
current_version = 0.2.1
commit = True
tag = True

[metadata]
name = guikit
version = attr: guikit.VERSION
description = Small tool to simplify the creation of GUIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ImperialCollegeLondon/python-gui-template
author = Research Computing Service, Imperial College London
author_email = rcs-support@imperial.ac.uk
classifiers = 
	License :: OSI Approved :: BSD License
	Development Status :: 4 - Beta
	Environment :: X11 Applications
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
install_requires = 
	wxPython
	PyPubSub
	pandas

[options.packages.find]
exclude = 
	test

[options.extras_require]
dev = 
	flake8
	black
	pytest
	pre-commit
	isort
	mypy
	bump2version
	pytest-cov
	pytest-flake8
	pytest-mypy
doc = 
	sphinx
	myst-parser
	sphinx-autoapi
	sphinx-rtd-theme

[bumpversion:file:setup.cfg]

[bumpversion:file:docs/conf.py]

[bumpversion:file:guikit/__init__.py]

[aliases]
test = pytest

[tool:pytest]
addopts = 
	-v --flake8 --mypy -p no:warnings
	--cov=guikit  --cov-report=html:htmlcov/coverage
	--doctest-modules --ignore=guikit/__main__.py
	--ignore=guikit/skeleton/__main__.py

[pycodestyle]
max-line-length = 88

[flake8]
max-line-length = 88
exclude = .venv/
extend-ignore = 
	E203,

[mypy]
ignore_missing_imports = True
strict_optional = False

[mypy-setup]
ignore_errors = True

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[pyscaffold]
version = 4.1
package = guikit
